New translations Build-Process.md (Chinese Simplified)